[package]
name = "chat-example"
version = "0.1.2"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
async-trait = "0.1"
env_logger = "0.10.1"
futures = { workspace = true }
git2 = "0.19.0"
libp2p = { path = "../../libp2p", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
log = "0.4.20"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ureq = { version = "2", features = ["json", "charset"] }

[lints]
workspace = true
