[package]
name = "distributed-commit-list"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
futures = { workspace = true }
libp2p = { path = "../../libp2p", features = [ "tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
git2 = { version = "0.19.0" }



[lints]
workspace = true
