[package]
name = "distributed-commit-list"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
async-trait = "0.1"
clap = { version = "4.4.13", features = ["derive"] }
futures = { workspace = true }
git2 = { version = "0.19.0" }
libp2p = { path = "../../libp2p", features = [ "tokio", "dns", "kad", "mdns", "noise", "macros",
"tcp", "yamux", "identify", "ping", "rendezvous"]}
reachable = "0.2.2"
reqwest = "0.12.12"
time = { version = "0.1.39" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt", "json"] }

[lints]
workspace = true
