[package]
name = "distributed-key-value-store-example"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
futures = { workspace = true }
libp2p = { path = "../../libp2p", features = [ "tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sha2 = "0.10.9"
git2 = "0.18.3"
gnostr = "0.0.111"
hex = "0.4.3"

[lints]
workspace = true
