[package]
name = "distributed-key-value-store-example"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
async-trait = "0.1"
base64 = "0.22.1"
futures = { workspace = true }
git2 = "0.18.3"
gnostr = "0.0.111"
hex = "0.4.3"
libp2p = { path = "../../libp2p", features = [ "cbor", "tokio", "dns", "kad", "mdns", "noise", "macros", "request-response", "tcp", "yamux"] }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.9"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
