[package]
name = "packfile-sharing"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = { workspace = true }
libp2p = { path = "../../libp2p", features = [ "tokio", "cbor", "dns", "kad", "noise", "macros",
"request-response", "tcp", "websocket", "yamux", "floodsub"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
packfile = "0.1.2"

[lints]
workspace = true
