[package]
name = "libp2p-server"
version = "0.12.8"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2021"
repository = "https://github.com/libp2p/rust-libp2p"
rust-version = { workspace = true }
description = "A rust-libp2p server binary."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5.6", features = ["derive"] }
futures = { version = "0.3.30" }
futures-timer = "3"
axum = "0.7"
libp2p = { version = "0.54.0", features = [
    "autonat",
    "dns",
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "identify",
    "kad",
    "ping",
    "relay",
    "macros",
    "metrics",
    "rsa",
    "tcp",
    "tokio",
    "macros",
    "quic",
    "websocket",
] }
libp2p-identity = { version = "0.2.10", features = ["ecdsa", "ed25519", "peerid", "rand", "rsa", "secp256k1", "serde"] }

prometheus-client = { version = "0.22.0" }
serde = "1.0.203"
serde_derive = "1.0.125"
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"

##ipfs website
anyhow = "1"
ipfs-api = "0.17.0"
#rust-ipfs = "0.11.18"


[lints]
rust.unreachable_pub = "warn"
clippy.used_underscore_binding = "warn"
clippy.pedantic = { level = "allow", priority = -1 }
clippy.type_complexity = "allow"
clippy.unnecessary_wraps = "warn"
clippy.manual_let_else = "warn"
clippy.dbg_macro = "warn"
